src/Labs/network-policies/pod-services.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: hashicorp/http-echo
      args: ["-text=Hola desde backend"]
      ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5678

---

apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: busybox
      command: ["sh", "-c", "sleep 3600"]

---

apiVersion: v1
kind: Pod
metadata:
  name: tester
  labels:
    app: tester
spec:
  containers:
    - name: tester
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
